Closed Bug 50619 Opened 24 years ago Closed 24 years ago

Cache doesn't get updated after reload

Categories

(Core :: Networking: Cache, defect, P1)

Other
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: dp, Assigned: neeti)

Details

(Whiteboard: [nsbeta3+])

Attachments

(2 files)

a.html (has link to b.html) - View a.html - click on b.html - back - click on b.html - back - modify b.html in the server - click b.html (we still display old b.html) - reload (we display new b.html) - back - click on b.html [WRONG: we show old b.html] A peek into the physical cache file shows that the file wasn't updated with the new b.html
Keywords: nsbeta3
Priority: P3 → P1
Whiteboard: [nsbeta3+]
Status: NEW → ASSIGNED
Target Milestone: --- → M18
Adding gagan and ruslan. Can you two and neeti review the attached patch. I have undone some of the hacks that had to be done for bug 40449 along with releasing cacheentry use on response complete.
I tested this page with a simulated test of bug 40449. I used the below cgi. Result was positive. We do well in all these cases. % cat autoreload.cgi #!/usr/bin/perl $curtime=`date`; print "Content-Type: text/html <html><body><h1>Current time is : $curtime </h1><p> <h2><center><font color=red>Page reloads in 10 secs</font></center></h2> <p> To check bug <a href=http://bugzilla.mozilla.org/show_bug.cgi?id=40449>40449</a> <p> <b>Test:</b>Note the time displayed, click this <a href=http://www.mozilla.org>link</a> and get back to this page. <p> <b>Expected Result</b>: You should see the time that you saw before clicking on the link. <script> setTimeout('location.reload()',9600); </script> </body></html> ";
Dp, I attached a patch for completely removing the 40449 hack. I tested this with the tinderbox page test described in bug 40449, and it works. Neeti Neeti
Logically, yourPatch = myPatch + expiration check removal. When I went through and removed hacks for 40449, I intentionally left that piece there as I wasn't sure if it was being done elsewhere. So did I leave additions to ResponseComplete() hacks for LogicalLength and Pragma:no-cache. Are you sure we do the check somewhere else? Do you have a test case ?
Yes, your patch is fine. We just need to remove the expiration check removal. I think we might still need the ResponseComplete hacks for LogicalLength and Pragma:no-cache, because these were not failing in the explicit in rv = mCacheEntry->GetInUse(&inUse); if (NS_FAILED(rv)) return rv; if (inUse) { return NS_OK; } but when we try to set the content length to zero at the place where we find that we have a Pragma:no-cache in CacheReceivedResponse() - line 1267, it fails. We can test this out by removing the hack, and setting the content length to zero in CacheReceivedResponse(). To test use this, use the test in bug 40449 for the slashdot case. 1. Go to slashdot 2. login 3. You will get a page with your name on it. 4. Click on a link. 5. Go back. At step 5, you should see the page got at step 3, and not the page got at step 1. Neeti
Per our discussion, we decided to leave the expiration check in as we didn't know where else it was being done. Neeti since you are going to be checking the patch, I am going to reassign the bug over to you. Thanks.
Assignee: dp → neeti
Status: ASSIGNED → NEW
Checked in the fix
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified: Linux rh6 2000091108 WinNT 2000091108 Mac os8.6 2000090820
Status: RESOLVED → VERIFIED
This still doesn't work! linux 2000091506 go to mozilla.org webpage click link to bonsai query latest checkins are loadad wait an hour click bonsai query again old page loads click ctrl+reload it reloads and more checkins display then way a little again - surf around - go to mozilla.org and click the link again: The version of bonsai that first displayed will now redisplay, NOT the one it was refreshed to.
After a while, clicking the "New Checkins" link will simply fail produce the "Error loading URL..... 804b0002 " instead.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: