Checking in dp's patch for bug 50619, Cache doesn't get updated after reload. r=neeti